--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div id="navbar">
             <!-- Logo and Logo Text -->
             <div id="logo-container">
-                <img src="/icons/BatterTrakLogo.png" alt="Logo" id="logo">
-                <img src="/icons/BatterTrak.png" alt="Logo Text" id="logo-text">
+                <img src="icons/BatterTrakLogo.png" alt="Logo" id="logo">
+                <img src="icons/BatterTrak.png" alt="Logo Text" id="logo-text">
             </div>
 
             <!-- Add more buttons as needed -->
