--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
+    <script src="exports.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/interactjs@latest"></script>
     <!-- Register the Service Worker -->
